test/arrays/literals/avoidCOMPOPTS/hetLiteralsNotUnifiable.compopts
-sinferArrayLiteralTypeFromFirstElt=true    # hetLiteralsNotUnifiable.good
-sinferArrayLiteralTypeFromFirstElt=false   # hetLiteralsNotUnifiable-worse.good
